--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,338 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+}
+/*--------------
+My Code Starts Here 
+---------------*/
+html {
+  font-size: 62.5%;
+}
+body {
+  padding: 0 20px;
+}
+div,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+nav,
+a,
+address,
+caption {
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: bold;
+}
+h3 {
+  font-size: 6.5rem;
+  text-align: center;
+}
+h4 {
+  font-size: 5.5rem;
+}
+header,
+section {
+  margin-bottom: 30px;
+}
+section {
+  padding: 50px 0;
+}
+hr {
+  margin-bottom: 20px;
+}
+button,
+a {
+  cursor: pointer;
+}
+a {
+  width: 100%;
+  color: #000;
+}
+a:hover {
+  text-decoration: underline;
+}
+header {
+  display: block;
+}
+header nav {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  align-items: center;
+  border-top: 2px solid #000;
+}
+header nav a {
+  border: 1px solid #000;
+  text-decoration: none;
+  text-align: center;
+  font-size: 7rem;
+  padding: 20px 0;
+}
+.intro {
+  background: #f7fff4;
+}
+.intro .img-cont {
+  display: block;
+  width: 70%;
+  background: linear-gradient(to bottom right, #2bfc4e, #006e06);
+  padding: 5px;
+  margin: 0 auto 20px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+.intro .img-cont img {
+  width: 100%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  border: 10px solid #fff;
+}
+.intro h1 {
+  font-size: 7.5rem;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: bold;
+}
+.intro p {
+  width: 80%;
+  font-size: 3rem;
+  font-weight: 100;
+  margin: 0 auto;
+  text-align: justify;
+}
+.intro p.tagline {
+  font-style: italic;
+  color: #494949;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.intro p.description {
+  margin-bottom: 20px;
+}
+.intro button {
+  display: block;
+  width: 50%;
+  font-size: 5rem;
+  padding: 20px;
+  background: #2bfc4e;
+  outline: none;
+  margin: 0 auto;
+  border: 2px solid #000;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+}
+.skills h3 {
+  color: #000;
+}
+.skills ul {
+  list-style-type: none;
+  border-bottom: 0;
+}
+.skills ul li {
+  border: 1px solid #000;
+  font-size: 4rem;
+  text-align: center;
+  padding: 35px 0;
+  margin-bottom: 10px;
+  animation: shrink 0.25s 0 forwards;
+  -webkit-animation: shrink 0.25s 0s forwards;
+}
+.skills ul li:hover {
+  animation: grow 0.25s 0s forwards;
+  -webkit-animation: grow 0.25s 0s forwards;
+}
+.work-hist ul li {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  width: 100%;
+}
+.work-hist ul li div {
+  width: 100%;
+  padding: 20px 30px;
+}
+.work-hist ul li div p {
+  font-size: 4rem;
+}
+.work-hist ul p.date {
+  font-size: 9rem;
+  text-align: center;
+  font-weight: bold;
+  border: 2px solid #000;
+  background: #f2f2f2;
+  width: 200px;
+  height: 200px;
+}
+.work-hist ul p span {
+  display: block;
+  font-size: 4rem;
+  text-transform: uppercase;
+  font-weight: 100;
+}
+@keyframes shrink {
+  0% {
+    padding: 100px 0;
+    background-color: #f4fff6;
+  }
+  100% {
+    padding: 35px 0;
+    background-color: #fff;
+  }
+}
+@keyframes grow {
+  0% {
+    padding: 35px 0;
+    background-color: #fff;
+  }
+  100% {
+    padding: 100px 0;
+    background-color: #f4fff6;
+  }
+}
+/*----------------
+MEDIA QUERIES
+--------------------*/
