mobile completed: experience

--- a/css/index.css
+++ b/css/index.css
@@ -285,15 +285,25 @@ header nav a {
   animation: grow 0.25s 0s forwards;
   -webkit-animation: grow 0.25s 0s forwards;
 }
+.work-hist {
+  background: #fafafa;
+}
 .work-hist ul li {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
   width: 100%;
+  margin-bottom: 10px;
 }
 .work-hist ul li div {
-  width: 100%;
+  width: 70%;
   padding: 20px 30px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  border-radius: 0 0 30px 0;
+  border: 1px solid;
+  background: #fff;
 }
 .work-hist ul li div p {
   font-size: 4rem;
@@ -303,15 +313,19 @@ header nav a {
   text-align: center;
   font-weight: bold;
   border: 2px solid #000;
-  background: #f2f2f2;
+  background: #dadada;
   width: 200px;
   height: 200px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
 }
 .work-hist ul p span {
   display: block;
   font-size: 4rem;
   text-transform: uppercase;
   font-weight: 100;
+  color: #003b03;
 }
 @keyframes shrink {
   0% {
