--- a/less/index.less
+++ b/less/index.less
@@ -64,6 +64,7 @@ My Code Starts Here
 @color-primary: #2bfc4e;
 @color-prim-light: lighten(@color-primary, 40%);
 @color-secondary: #006e06;
+@color-seco-dark: darken(@color-secondary, 10%);
 
 
 html {
@@ -227,16 +228,25 @@ header {
 }
 
 .work-hist {
+	background: #fafafa;
+
 	ul {
 		li {
 			display: flex;
 			flex-flow: row nowrap;
 			justify-content: center;
 			width: 100%;
+			margin-bottom: 10px;
 
 			div {
-				width: 100%;
+				width: 70%;
 				padding: 20px 30px;
+				display: flex;
+				flex-flow: column;
+				justify-content: center;
+				border-radius: 0 0 30px 0;
+				border: 1px solid;
+				background: #fff;
 
 				p {
 					font-size: 4rem;
@@ -249,9 +259,12 @@ header {
 				text-align: center;
 				font-weight: bold;
 				border: 2px solid #000;	
-				background: #f2f2f2;
+				background: #dadada;
 				width: 200px;
 				height: 200px;
+				display: flex;
+				flex-flow: column;
+				justify-content: center;
 			}
 
 			span {
@@ -259,6 +272,7 @@ header {
 				font-size: 4rem;
 				text-transform: uppercase;
 				font-weight: 100;
+				color: @color-seco-dark;
 			}
 		}
 	}
