--- a/css/index.css
+++ b/css/index.css
@@ -327,6 +327,40 @@ header nav a {
   font-weight: 100;
   color: #003b03;
 }
+.contact form {
+  padding: 0 50px;
+}
+.contact form label {
+  font-size: 4rem;
+  text-transform: uppercase;
+}
+.contact form input,
+.contact form textarea {
+  width: 100%;
+  height: 100px;
+  font-size: 6.5rem;
+  color: #2f4f4f;
+  margin-bottom: 20px;
+}
+.contact form textarea {
+  height: 250px;
+}
+.contact form input[type="submit"] {
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+}
+footer {
+  background: #909090;
+  padding: 50px 0;
+}
+footer p {
+  width: 80%;
+  margin: 0 auto;
+  color: #fff;
+  font-size: 3.5rem;
+  text-align: center;
+}
 @keyframes shrink {
   0% {
     padding: 100px 0;
