--- a/less/index.less
+++ b/less/index.less
@@ -149,7 +149,7 @@ header {
 	.img-cont {
 		display: block;
 		width: 70%;
-		background: linear-gradient(to bottom right, @color-primary, rgb(0, 110, 6));
+		background: linear-gradient(to bottom right, @color-primary, @color-secondary);
 		padding: 5px;
 		margin: 0 auto 20px;
 		.border(50%);
@@ -275,6 +275,46 @@ header {
 				color: @color-seco-dark;
 			}
 		}
+	}
+}
+
+.contact {
+
+	form {
+		padding: 0 50px;
+
+		label {
+			font-size: 4rem;
+			text-transform: uppercase;
+		}
+		
+		input, textarea {
+			width: 100%;
+			height: 100px;
+			font-size: 6.5rem;
+			color: #2f4f4f;
+			margin-bottom: 20px;
+		}
+		textarea {
+			height: 250px;
+		}
+
+		input[type="submit"] {
+			.border(10px);
+		}
+	}
+}
+
+footer {
+	background: #909090;
+	padding: 50px 0;
+
+	p {
+		width: 80%;
+		margin: 0 auto;
+		color: #fff;
+		font-size: 3.5rem;
+		text-align: center;
 	}
 }
 
