--- a/css/index.css
+++ b/css/index.css
@@ -142,6 +142,7 @@ html {
 }
 body {
   padding: 0 20px;
+  width: 100%;
 }
 div,
 p,
@@ -166,15 +167,11 @@ h6 {
   font-weight: bold;
 }
 h3 {
-  font-size: 6.5rem;
+  font-size: 3.5rem;
   text-align: center;
 }
 h4 {
-  font-size: 5.5rem;
-}
-header,
-section {
-  margin-bottom: 30px;
+  font-size: 3rem;
 }
 section {
   padding: 50px 0;
@@ -207,11 +204,16 @@ header nav a {
   border: 1px solid #000;
   text-decoration: none;
   text-align: center;
-  font-size: 7rem;
+  font-size: 2.5rem;
   padding: 20px 0;
 }
 .intro {
+  display: flex;
+  flex-flow: column nowrap;
   background: #f7fff4;
+}
+.intro div {
+  width: 100%;
 }
 .intro .img-cont {
   display: block;
@@ -231,19 +233,20 @@ header nav a {
   border: 10px solid #fff;
 }
 .intro h1 {
-  font-size: 7.5rem;
+  font-size: 4rem;
   text-transform: uppercase;
   text-align: center;
   font-weight: bold;
 }
 .intro p {
   width: 80%;
-  font-size: 3rem;
+  font-size: 1.8rem;
   font-weight: 100;
   margin: 0 auto;
   text-align: justify;
 }
 .intro p.tagline {
+  font-size: 2.25rem;
   font-style: italic;
   color: #494949;
   text-align: center;
@@ -255,8 +258,8 @@ header nav a {
 .intro button {
   display: block;
   width: 50%;
-  font-size: 5rem;
-  padding: 20px;
+  font-size: 2rem;
+  padding: 10px 20px;
   background: #2bfc4e;
   outline: none;
   margin: 0 auto;
@@ -274,9 +277,9 @@ header nav a {
 }
 .skills ul li {
   border: 1px solid #000;
-  font-size: 4rem;
+  font-size: 2.5rem;
   text-align: center;
-  padding: 35px 0;
+  padding: 15px 0;
   margin-bottom: 10px;
   animation: shrink 0.25s 0 forwards;
   -webkit-animation: shrink 0.25s 0s forwards;
@@ -306,23 +309,23 @@ header nav a {
   background: #fff;
 }
 .work-hist ul li div p {
-  font-size: 4rem;
+  font-size: 2rem;
 }
 .work-hist ul p.date {
-  font-size: 9rem;
+  font-size: 3.7rem;
   text-align: center;
   font-weight: bold;
   border: 2px solid #000;
   background: #dadada;
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: auto;
   display: flex;
   flex-flow: column;
   justify-content: center;
 }
 .work-hist ul p span {
   display: block;
-  font-size: 4rem;
+  font-size: 2.5rem;
   text-transform: uppercase;
   font-weight: 100;
   color: #003b03;
@@ -331,14 +334,14 @@ header nav a {
   padding: 0 50px;
 }
 .contact form label {
-  font-size: 4rem;
+  font-size: 2rem;
   text-transform: uppercase;
 }
 .contact form input,
 .contact form textarea {
   width: 100%;
-  height: 100px;
-  font-size: 6.5rem;
+  height: auto;
+  font-size: 2.25rem;
   color: #2f4f4f;
   margin-bottom: 20px;
 }
@@ -346,6 +349,7 @@ header nav a {
   height: 250px;
 }
 .contact form input[type="submit"] {
+  padding: 10px 20px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
@@ -358,29 +362,115 @@ footer p {
   width: 80%;
   margin: 0 auto;
   color: #fff;
-  font-size: 3.5rem;
+  font-size: 2rem;
   text-align: center;
 }
 @keyframes shrink {
   0% {
-    padding: 100px 0;
+    padding: 50px 0;
     background-color: #f4fff6;
   }
   100% {
-    padding: 35px 0;
+    padding: 15px 0;
     background-color: #fff;
   }
 }
 @keyframes grow {
   0% {
-    padding: 35px 0;
+    padding: 15px 0;
     background-color: #fff;
   }
   100% {
-    padding: 100px 0;
+    padding: 50px 0;
     background-color: #f4fff6;
   }
 }
 /*----------------
 MEDIA QUERIES
 --------------------*/
+@media (min-width: 501px) {
+  .intro {
+    flex-flow: row wrap;
+  }
+  .intro div {
+    width: 60%;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    padding: 0 20px;
+  }
+  .intro .img-cont {
+    width: 40%;
+    height: 40%;
+  }
+  .intro .img-cont .headshot {
+    width: 100%;
+    padding: 0;
+  }
+  .intro .img-cont img {
+    width: 100%;
+  }
+  .intro p {
+    width: 100%;
+  }
+  .intro button {
+    display: block;
+  }
+}
+@media (min-width: 800px) {
+  body {
+    max-width: 1000px;
+    padding: 0;
+    margin: 0 auto;
+  }
+  header,
+  section {
+    padding: 0;
+  }
+  header nav {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-end;
+    padding: 20px 0;
+    border-bottom: 2px solid #000;
+  }
+  header nav a {
+    width: auto;
+    border: 0;
+    text-align: right;
+    padding: 0 0 0 40px;
+    font-size: 1.9rem;
+  }
+  .intro {
+    flex-flow: column nowrap;
+    padding: 40px 0;
+  }
+  .intro div {
+    width: 100%;
+    padding: 10px 50px;
+  }
+  .intro .img-cont {
+    max-width: 250px;
+  }
+  .intro .img-cont .headshot {
+    padding: 0;
+  }
+  .intro button {
+    width: auto;
+  }
+  .detail {
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+  }
+  .skills,
+  .work-hist {
+    display: inline-block;
+    width: 48%;
+    padding: 40px 0;
+  }
+  .contact {
+    padding: 40px 0;
+  }
+}
