--- a/less/index.less
+++ b/less/index.less
@@ -73,6 +73,7 @@ html {
 
 body {
 	padding: 0 20px;
+	width: 100%;
 }
 
 div, p, h1, h2, h3, h4, h5, h6, nav, a, address, caption {
@@ -84,17 +85,17 @@ h1, h2, h3, h4, h5, h6{
 }
 
 h3 {
-	font-size: 6.5rem;
+	font-size: 3.5rem;
 	text-align: center;
 }
 
 h4 {
-	font-size: 5.5rem;
+	font-size: 3rem;
 }
 
-header, section {
-	margin-bottom: 30px;
-}
+// header, section {
+// 	margin-bottom: 20px;
+// }
 
 section {
 	padding: 50px 0;
@@ -137,14 +138,20 @@ header {
 			border: 1px solid #000;
 			text-decoration: none;
 			text-align: center;
-			font-size: 7rem;
+			font-size: 2.5rem;
 			padding: 20px 0;
 		}
 	}
 }
 
 .intro {
+	display: flex;
+	flex-flow: column nowrap;
 	background: #f7fff4;
+
+	div {
+		width: 100%;
+	}
 
 	.img-cont {
 		display: block;
@@ -162,7 +169,7 @@ header {
 	}
 
 	h1 {
-		font-size: 7.5rem;
+		font-size: 4rem;
 		text-transform: uppercase;
 		text-align: center;
 		font-weight: bold;
@@ -170,12 +177,13 @@ header {
 
 	p {
 		width: 80%;
-		font-size: 3rem;
+		font-size: 1.8rem;
 		font-weight: 100;
 		margin: 0 auto;
 		text-align: justify;
 
 		&.tagline {
+			font-size: 2.25rem;
 			font-style: italic;
 			color: rgb(73, 73, 73);
 			text-align: center;
@@ -190,8 +198,8 @@ header {
 	button {
 		display: block;
 		width: 50%;
-		font-size: 5rem;
-		padding: 20px;
+		font-size: 2rem;
+		padding: 10px 20px;
 		background: @color-primary;
 		outline: none;
 		margin: 0 auto;
@@ -212,9 +220,9 @@ header {
 
 		li {
 			border: 1px solid #000;
-			font-size: 4rem;
+			font-size: 2.5rem;
 			text-align: center;
-			padding: 35px 0;
+			padding: 15px 0;
 			margin-bottom: 10px;
 			animation: shrink 0.25s 0 forwards;
 			-webkit-animation: shrink 0.25s 0s forwards;
@@ -249,19 +257,19 @@ header {
 				background: #fff;
 
 				p {
-					font-size: 4rem;
+					font-size: 2rem;
 				}
 			}
 		}
 		p {
 			&.date {
-				font-size: 9rem;
+				font-size: 3.7rem;
 				text-align: center;
 				font-weight: bold;
 				border: 2px solid #000;	
 				background: #dadada;
-				width: 200px;
-				height: 200px;
+				width: 100px;
+				height: auto;
 				display: flex;
 				flex-flow: column;
 				justify-content: center;
@@ -269,7 +277,7 @@ header {
 
 			span {
 				display: block;
-				font-size: 4rem;
+				font-size: 2.5rem;
 				text-transform: uppercase;
 				font-weight: 100;
 				color: @color-seco-dark;
@@ -284,14 +292,14 @@ header {
 		padding: 0 50px;
 
 		label {
-			font-size: 4rem;
+			font-size: 2rem;
 			text-transform: uppercase;
 		}
 		
 		input, textarea {
 			width: 100%;
-			height: 100px;
-			font-size: 6.5rem;
+			height: auto;
+			font-size: 2.25rem;
 			color: #2f4f4f;
 			margin-bottom: 20px;
 		}
@@ -300,6 +308,7 @@ header {
 		}
 
 		input[type="submit"] {
+			padding: 10px 20px;
 			.border(10px);
 		}
 	}
@@ -313,29 +322,29 @@ footer {
 		width: 80%;
 		margin: 0 auto;
 		color: #fff;
-		font-size: 3.5rem;
+		font-size: 2rem;
 		text-align: center;
 	}
 }
 
 @keyframes shrink {
 	0% {
-		padding: 100px 0;
+		padding: 50px 0;
 		background-color: @color-prim-light;
 	}
 	100% {
-		padding: 35px 0;
+		padding: 15px 0;
 		background-color: #fff;
 	}
 }
 
 @keyframes grow {
 	0% {
-		padding: 35px 0;
+		padding: 15px 0;
 		background-color: #fff;
 	}
 	100% {
-		padding: 100px 0;
+		padding: 50px 0;
 		background-color: @color-prim-light;
 	}
 }
@@ -345,8 +354,111 @@ MEDIA QUERIES
 --------------------*/
 
 @tablet: 501px;
-@desktop: 850px;
+@desktop: 800px;
 
 @media(min-width: @tablet){
+	.intro {
+		flex-flow: row wrap;
 
+		div {
+			width: 60%;
+			display: flex;
+			flex-flow: column;
+			justify-content: center;
+			padding: 0 20px;
+		}
+
+		.img-cont {
+			width: 40%;
+			height: 40%;
+
+			.headshot {
+				width: 100%;
+				padding: 0;
+			}
+
+			img {
+				width: 100%;
+			}
+		}
+
+		p {
+			width: 100%;
+		}
+
+
+		button {
+			display: block;
+		}
+	}
+}
+
+@media(min-width: @desktop) {
+	body {
+		max-width: 1000px;
+		padding: 0;
+		margin: 0 auto;
+	}
+
+	header, section {
+		padding: 0;
+	}
+
+	header {
+		nav {
+			display: flex;
+			flex-flow: row nowrap;
+			justify-content: flex-end;
+			padding: 20px 0;
+			border-bottom: 2px solid #000;
+
+			a {
+				width: auto;
+				border: 0;
+				text-align: right;
+				padding: 0 0 0 40px;
+				font-size: 1.9rem;
+			}
+		}
+	}
+
+	.intro {
+		flex-flow: column nowrap;
+		padding: 40px 0;
+
+		div {
+			width: 100%;
+			padding: 10px 50px;
+		}
+
+		.img-cont{
+			max-width: 250px;
+
+			.headshot {
+				padding: 0;
+			}
+		}
+
+		button {
+			width: auto;
+		}
+
+	}
+	.detail {
+		width: 100%;
+		display: flex;
+		flex-flow: row nowrap;
+		justify-content: space-between;
+		// padding: 25px 50px;
+	}
+
+	.skills, .work-hist {
+		display: inline-block;
+		width: 48%;
+		padding: 40px 0;
+	}
+
+	.contact {
+		padding: 40px 0;
+	}
 }
