--- a/less/index.less
+++ b/less/index.less
@@ -66,7 +66,19 @@ My Code Starts Here
 @color-secondary: #006e06;
 @color-seco-dark: darken(@color-secondary, 10%);
 
+// MIXINS
+.border(@size) {
+	-webkit-border-radius: @size;
+	-moz-border-radius: @size;
+	border-radius: @size;
+}
 
+.center() {
+	display: flex;
+	flex-flow: row nowrap;
+}
+
+// LESS
 html {
 	font-size: 62.5%;
 }
@@ -107,12 +119,6 @@ hr {
 
 button, a {
 	cursor: pointer;
-}
-
-.border(@size) {
-	-webkit-border-radius: @size;
-	-moz-border-radius: @size;
-	border-radius: @size;
 }
 
 a {
@@ -185,7 +191,7 @@ header {
 		&.tagline {
 			font-size: 2.25rem;
 			font-style: italic;
-			color: rgb(73, 73, 73);
+			color: #494949;
 			text-align: center;
 			margin-bottom: 20px;
 		}
@@ -384,6 +390,7 @@ MEDIA QUERIES
 
 		p {
 			width: 100%;
+			max-width: 400px;
 		}
 
 
@@ -428,11 +435,12 @@ MEDIA QUERIES
 
 		div {
 			width: 100%;
-			padding: 10px 50px;
+			padding: 10px 0;
 		}
 
 		.img-cont{
-			max-width: 250px;
+			max-width: 225px;
+			margin: 0 auto;
 
 			.headshot {
 				padding: 0;
@@ -441,6 +449,11 @@ MEDIA QUERIES
 
 		button {
 			width: auto;
+			text-transform: uppercase;
+			font-weight: bold;
+			font-size: 1.8em;
+			color: #fff;
+			background: linear-gradient(to bottom right, @color-secondary, @color-seco-dark);
 		}
 
 	}
@@ -449,7 +462,6 @@ MEDIA QUERIES
 		display: flex;
 		flex-flow: row nowrap;
 		justify-content: space-between;
-		// padding: 25px 50px;
 	}
 
 	.skills, .work-hist {
