--- a/less/index.less
+++ b/less/index.less
@@ -417,8 +417,7 @@ MEDIA QUERIES
 
 	header {
 		nav {
-			display: flex;
-			flex-flow: row nowrap;
+			.center();
 			justify-content: flex-end;
 			padding: 20px 0;
 			border-bottom: 2px solid #000;
@@ -463,8 +462,7 @@ MEDIA QUERIES
 	}
 	.detail {
 		width: 100%;
-		display: flex;
-		flex-flow: row nowrap;
+		.center();
 		justify-content: space-between;
 	}
 
